tests/negative/neg_try_send_compound_else_use.safe
-- Test: neg_try_send_compound_else_use
-- Description: Access-typed channel elements are rejected before try_send path-sensitivity checks run.
-- Expected: REJECT source_frontend_error

package neg_Try_Send_Compound_Else_Use

   type payload is record
      value : integer;


   type payload_Ptr is access payload;

   channel Data_Ch : payload_Ptr capacity 1;

   function run
      Source  : payload_Ptr = new ((value = 1) as payload);
      success : boolean = False;
      ready   : boolean = False;

      try_send Data_Ch, Source, success;
      if success and then ready
      else
         send Data_Ch, Source;



